// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WillBeRemovedCell should render 1`] = `
<div>
  <td
    class=""
  />
</div>
`;

exports[`WillBeRemovedCell should render as will be removed 1`] = `
<div>
  <td
    class=""
  >
    <div
      class="label label-root label-danger label-lg label-uppercase"
    >
      <span
        class="label-item"
      >
        Will Be Removed
      </span>
    </div>
  </td>
</div>
`;
